[package]
name = "sotfsavetools"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
eframe = "0.21.3"
egui = "0.21.0"
serde = "1.0.152"
serde_json = "1.0.93"
serde_with = { version = "2.2.0", features = ["json"] }
